--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,11 +58,12 @@ jobs:
         shell: bash
         run: |
           set -eux
-          aws s3 sync "${EXT_DIR}" "s3://${S3_BUCKET}/extensions" \
+          aws s3 sync "${EXT_DIR}" "s3://${S3_BUCKET}" \
             --endpoint-url "${S3_ENDPOINT}" \
             --no-follow-symlinks \
             --exclude "*" \
             --exclude ".registry/**" \
+            --exclude "*/node_modules/**" \
             --include "*/dist/**" \
             --include "*/manifest.json" \
             --include "*/package.json" \
