Simplify node_modules exclusion in workflow
Removed redundant node_modules exclusion patterns.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,9 @@ jobs:
             --no-follow-symlinks \
             --exclude "*" \
             --exclude ".registry/**" \
+            --exclude "node_modules/**" \
             --exclude "*/node_modules/**" \
+            --exclude "**/node_modules/**" \
             --include "*/dist/**" \
             --include "*/manifest.json" \
             --include "*/package.json" \
