Modify S3 sync command in GitHub Actions workflow
Update S3 sync command to include extensions path.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
         shell: bash
         run: |
           set -eux
-          aws s3 sync "${EXT_DIR}" "s3://${S3_BUCKET}" \
+          aws s3 sync "${EXT_DIR}" "s3://${S3_BUCKET}/extensions" \
             --endpoint-url "${S3_ENDPOINT}" \
             --no-follow-symlinks \
             --exclude "*" \
